<resources>
    <string name="app_name">宠宠pamper</string>
    <string name="cancel">取消</string>
    <string name="update_app_title">升级了</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_return">返回</string>
    <string name="update_app">更新</string>
    <string name="loading">加载中…</string>
    <string name="downloadMyApp">正在状态栏下载...</string>
    <string name="updateExit">我退出了,请您更新版本在使用</string>
    <string name="WeChat_circle_friends">微信朋友圈</string>
    <string name="WeChat_friends">微信好友</string>
    <string name="qq_friends">QQ好友</string>
    <string name="Qzone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="Copylink">复制链接</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="mobilenumber_hint">手机号只能以“+”或数字开头第二位开始只能包含“-”和数字</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="mobilenumber_empty_guide">手机号为空将清除之前设置的手机号</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="error_gif">x or y ha de ser almenys %1$dpx i el tamany de l\'arxiu no ha de ser major que %2$sM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="chinese_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
