<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" 
    android:background="@color/write">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp">
<!--         微信朋友圈 -->
    <LinearLayout 
        android:id="@+id/llt_WeChat_circle_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <ImageView 
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@mipmap/wechat_circle_friends"
        android:layout_gravity="center"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WeChat_circle_friends"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    </LinearLayout>
    <!--         微信好友-->
    <LinearLayout 
        android:id="@+id/llt_WeChat_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <ImageView 
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@mipmap/wechat_friends"
        android:layout_gravity="center"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WeChat_friends"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    </LinearLayout>
    <!--        QQ好友 -->
    <LinearLayout 
        android:id="@+id/llt_qq_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <ImageView 
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@mipmap/qq_friends"
        android:layout_gravity="center"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qq_friends"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    </LinearLayout>
    </LinearLayout>
    
       <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
<!--         QQ空间 -->
    <LinearLayout 
        android:id="@+id/llt_Qzone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <ImageView 
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@mipmap/qq_zone"
        android:layout_gravity="center"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qzone"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    </LinearLayout>

    <!--         复制链接-->
    <LinearLayout 
        android:id="@+id/llt_Copylink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">
    <ImageView 
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@mipmap/cope_link"
        android:layout_gravity="center"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copylink"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    </LinearLayout>

           <!--        weibo -->
           <LinearLayout
               android:id="@+id/llt_weibo"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:visibility="invisible"
               android:layout_gravity="center_horizontal"
               android:layout_weight="1">
               <ImageView
                   android:layout_width="35dp"
                   android:layout_height="35dp"
                   android:src="@mipmap/weibo"
                   android:layout_gravity="center"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/weibo"
                   android:textColor="@color/black"
                   android:layout_gravity="center"/>
           </LinearLayout>

    </LinearLayout>
    <Button 
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_45px" />
    

</LinearLayout>
